--- a/i3status/config
+++ b/i3status/config
@@ -1,15 +1,11 @@
 general {
-  colors = true
-  color_good = "#a3be8c"
-  color_degraded = "#ebcb8b"
-  color_bad = "#bf616a"
   interval = 1
-  separator = "|"
+  separator = ""
+  colors = false 
 }
 
 order += "battery 0"
 order += "time"
-order += "wireless wlp1s0"
 
 battery 0 {
   format = "⚡ %percentage"
@@ -20,11 +16,6 @@ battery 0 {
 }
 
 time {
-  format = "⌚ %H:%M - 🗓️ %d/%m/%Y"
-}
-
-wireless wlp1s0 {
-  format_up = "🌐 %essid "
-  format_down = "🌐 Desconectado "
+  format = "⌚ %H:%M"
 }
 
